Added app routing

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
 
+<div class="header">
+  <app-header></app-header>
+  </div>
+
   <!-- Custom Components -->
   <div class="body">
-    <app-shopping></app-shopping>
+    <router-outlet></router-outlet>
   </div>
