--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,8 +1,8 @@
 <div>
   <ul>
     <li>
-      <a href="/">Home</a>
-      <a href="/">New Element</a>
+      <a routerLink="/">Home</a>
+      <a routerLink="/add">New Element</a>
     </li>
   </ul>
 </div>
