--- a/src/app/components/items/items.component.html
+++ b/src/app/components/items/items.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="main-container">
   <app-total message = {{message}}
             [totalPayment] = totalPayment
             ></app-total>
